--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ android {
 
 dependencies {
 
+    def nav_version = "2.4.1"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
