firebase auth lisätty RegisterDriveriin

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
 buildscript {
+    repositories {
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
+        mavenCentral()
+
+    }
+    dependencies {
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.10'
+
+    }
     ext {
         compose_version = '1.0.1'
     }
