--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,21 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-   // implementation "com.google.accompanist:accompanist-permissions:0.24.6"
+
+    // CameraX core library using the camera2 implementation
+    def camerax_version = "1.1.0-beta03"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    //implementation("androidx.camera:camera-core:${camerax_version}")
+    implementation("androidx.camera:camera-camera2:${camerax_version}")
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
+    // If you want to additionally use the CameraX View class
+    implementation("androidx.camera:camera-view:${camerax_version}")
+    // If you want to additionally use the CameraX Extensions library
+    //implementation("androidx.camera:camera-extensions:${camerax_version}")
+
+    implementation "com.google.accompanist:accompanist-permissions:0.18.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
