kuvan otto rahtikirjasta, kuvan tallennus firebase storageen, keikkadokumenttiin päivitetään state: closed, imageUrl: storagesta saatu url, time_delivered: aikaleima

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0")
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
@@ -67,17 +68,12 @@ dependencies {
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.1.0-beta03"
-    // The following line is optional, as the core library is included indirectly by camera-camera2
-    //implementation("androidx.camera:camera-core:${camerax_version}")
     implementation("androidx.camera:camera-camera2:${camerax_version}")
-    // If you want to additionally use the CameraX Lifecycle library
     implementation("androidx.camera:camera-lifecycle:${camerax_version}")
-    // If you want to additionally use the CameraX View class
     implementation("androidx.camera:camera-view:${camerax_version}")
-    // If you want to additionally use the CameraX Extensions library
-    //implementation("androidx.camera:camera-extensions:${camerax_version}")
 
     implementation "com.google.accompanist:accompanist-permissions:0.18.0"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
